<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Our Music</string>
    <string name="song_title">Recent Songs</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="friend_title">Friends</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="create_user">Create User</string>
    <string name="create_account">If you don\'t have an account you can create one here</string>
    <string name="create_account_btn">Create Account</string>
    <string name="search_header">Search</string>
    <string name="top_ten">Top 10</string>
    <string name="top_three">Top 3 Songs from Friends</string>
    <string name="custom_query">Custom Query</string>
    <string name="search_button">Search</string>
    <string name="results_heading">Query Results</string>
    <string name="new_search">New Search</string>
    <string name="home">Return Home</string>
    <string name="add_song">Add Song</string>
    <string name="add_friend">Add Friend</string>
    <string name="song_name">Title</string>
    <string name="artist_name">Artist</string>
    <string name="album_name">Album</string>
    <string name="friend_username">Friend\'s Username</string>
    <string name="logout_text">Logout</string>

</resources>
