<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/songHeader"
        android:text="@string/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <TextView
        android:id="@+id/recentSongList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/songHeader"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/friendsHeader"
        android:layout_below="@id/recentSongList"
        android:layout_marginTop="25dp"
        android:text="@string/friend_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/friendsList"
        android:layout_below="@id/friendsHeader"
        android:layout_marginTop="25dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_songs"
        android:layout_below="@+id/friendsList"
        android:text="@string/search_button"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:onClick="goToSearch"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_song_button"
        android:layout_toRightOf="@+id/search_songs"
        android:layout_toEndOf="@id/search_songs"
        android:layout_below="@id/friendsList"
        android:layout_marginTop="15dp"
        android:text="@string/add_song"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:onClick="launchAddSong"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_friend_button"
        android:layout_toRightOf="@id/add_song_button"
        android:layout_toEndOf="@id/add_song_button"
        android:layout_below="@id/friendsList"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/add_friend"
        />


</RelativeLayout>
