<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/usernameNewUser"
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/loginBoxNewUser"
        android:layout_width="200dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameNewUser"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/passwordNewUser"
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBoxNewUser"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/passwordBoxNewUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordNewUser"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/confirmPasswordNewUser"
        android:text="@string/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordBoxNewUser"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/confirmPasswordBoxNewUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordNewUser"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/emailNewUser"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordBoxNewUser"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/emailBoxNewUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailNewUser"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/confirmEmailNewUser"
        android:text="@string/confirm_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailBoxNewUser"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/confirmEmailBoxNewUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmEmailNewUser"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmEmailBoxNewUser"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/create_user"
        android:onClick="submitNewUserRequest"
        />

</RelativeLayout>