<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_song_header"
        android:text="@string/add_song"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/song_title"
        android:text="@string/song_name"
        android:layout_below="@id/add_song_header"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/song_title_field"
        android:layout_below="@+id/song_title"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/artist_title"
        android:text="@string/artist_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/song_title_field"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/song_artist_field"
        android:layout_below="@+id/artist_title"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/album_title"
        android:text="@string/album_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/song_artist_field"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/song_album_field"
        android:layout_below="@+id/album_title"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/submit_song"
        android:layout_below="@id/song_album_field"
        android:layout_marginTop="50dp"
        android:text="@string/add_song"
        android:onClick="addSong"
        />

</RelativeLayout>