<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/results_header"
        android:text="@string/results_heading"
        android:textSize="@dimen/activity_header_font_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/results_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/query_list"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/result_type"
        android:layout_marginTop="25dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/return_to_search"
        android:layout_below="@+id/query_list"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/new_search"
        android:onClick="returnToSearch"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/return_home"
        android:text="@string/home"
        android:layout_below="@id/query_list"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/return_to_search"
        android:layout_toEndOf="@id/return_to_search"
        android:layout_marginLeft="50dp"
        android:onClick="returnHome"
        />

</RelativeLayout>